--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <link rel="stylesheet" href="style.css">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Tangerine">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="viewport" content="height=device-height, initial-scale=1.0">
+        
         <meta http-equiv="X-UA-Compatible" content="width=device-width, initial-scale='1.0'">
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous"/>   
         
@@ -95,7 +95,7 @@
 
     <div class="player"> 
 
-        <i class="fas fa-step-backward setas voltar"></i>
+        <i class="fas fa-step-backward setas anterior"></i>
         <i class="fas fa-play-circle botao-play" ></i> 
         <i class="fas fa-pause-circle botao-pause" style="display:none;"></i> 
         <i class="fas fa-step-forward setas proximo"></i>
