--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
         <i class="fas fa-step-forward setas proximo"></i>
         
     </div>
-    <audio src="./music/dear_are_you_getting_sober.mp3"></audio>
+    <audio src="./music/"></audio>
 </div>
     <script src="vanta.js"> </script> 
     </main> 
